<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asterisk</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_welcome">Welcome to Asterisk!</string>

    <string name="title_register">Complete your data below!</string>
    <string name="message_register">Let\'s register 👋</string>
    <string name="title_login">Welcome!</string>
    <string name="message_login">Let\'s login 👋</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_password">Password must not be less than 8 characters!</string>
    <string name="error_email">Incorrect email entered!</string>
    <string name="account_register">Don’t have an account?</string>
    <string name="account_login">Have an account?</string>

    <string name="success">Success!</string>
    <string name="register_success">The account is ready. Come share your review on Asterisk!</string>
    <string name="login_success">You have successfully logged in. Come share your review on Asterisk!</string>
    <string name="failed">Sorry...</string>
    <string name="register_failed">Account creation failed, please re-register.</string>
    <string name="login_failed">You failed to login, please login again.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="logout">Logout</string>
    <string name="valid_logout">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello">Hello,</string>
    <string name="name_restaurant">Restaurant Name</string>
    <string name="address_restaurant">Restaurant Location</string>
    <string name="photo_restaurant">Restaurant Photo</string>

    <string name="add_review">Add Review</string>
    <string name="submit">Submit</string>
    <string name="empty_input">Please enter a review first.</string>
    <string name="title_detail">Detail</string>
    <string name="title_review">Review</string>
    <string name="title_my_review">My Reviews</string>
    <string name="subtitle_review">Give Review</string>
    <string name="message_review">There are no reviews yet.</string>
    <string name="hint_review">Enter your review here...</string>

    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
</resources>