<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/menu_item_color"
        android:titleTextColor="@color/menu_item_color" />
    <item
        android:id="@+id/action_review"
        android:title="@string/title_my_review"
        android:icon="@drawable/ic_baseline_review_24"
        android:iconTint="@color/menu_item_color"
        android:titleTextColor="@color/menu_item_color" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_baseline_account_24"
        android:iconTint="@color/menu_item_color"
        android:titleTextColor="@color/menu_item_color" />
</menu>