<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddReviewActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="@color/navy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2" />

    <TextView
        style="@style/TextAppearance.AppCompat.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/navy"
        android:text="@string/title_review"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="29dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="@drawable/gradient_background"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_restaurant_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:transitionName="photo"
                    android:clipToOutline="true"
                    android:background="@drawable/rounded_search"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name_restaurant"
                    style="@style/TextAppearance.AppCompat.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:transitionName="name"
                    tools:text="@string/name_restaurant" />

                <TextView
                    android:id="@+id/tv_address_restaurant"
                    style="@style/TextAppearance.AppCompat.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:transitionName="address"
                    tools:text="@string/address_restaurant" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_search"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_review_title"
                    style="@style/TextAppearance.AppCompat.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/navy"
                    android:text="@string/subtitle_review" />

                <EditText
                    android:id="@+id/et_review"
                    style="@style/TextAppearance.AppCompat.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/gray"
                    android:hint="@string/hint_review"
                    android:inputType="textMultiLine"
                    android:gravity="top|start" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmitReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/navy"
                android:text="@string/submit"
                style="@style/TextAppearance.AppCompat.BodyLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>