<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_restaurant_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/photo_restaurant"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clipToOutline="true"
            android:background="@drawable/rounded_search"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_restaurant_photo"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name_restaurant"
                style="@style/TextAppearance.AppCompat.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/name_restaurant" />

            <TextView
                android:id="@+id/tv_address_restaurant"
                style="@style/TextAppearance.AppCompat.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/address_restaurant" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>